Some template stuff

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,3 +1,9 @@
 {% for project in projects %}
-  {{ project.title }}
+    <p>{{ project.title }}</p>
+    <p>
+      {{ project.owner_role }} seeking
+      {% for wanted in project.wanted_set.all %}
+        {{ wanted.role }}
+      {% endfor %}
+    </p>
 {% endfor %}
