--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,9 +1,53 @@
-{% for project in projects %}
-  <p><a href="{% url 'core.views.project_details' project.id %}">{{ project.title }}</a></p>
-  <p>
-    {{ project.owner_role }} seeking
-    {% for wanted in project.wanted_set.all %}
-      {{ wanted.role }}
-    {% endfor %}
-  </p>
-{% endfor %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+  <style type="text/css">
+    .site {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
+    }
+    .flex {
+      display: flex;
+    }
+    .content {
+
+    }
+    .nav {
+      flex-direction: column;
+    }
+    .list {
+      flex-direction: column;
+    }
+  </style>
+
+</head>
+<body class="site">
+  <div class="flex header">
+
+  </div>
+  <div class="flex content">
+    <div class="flex nav">
+    </div>
+    <div class="flex list">
+      {% for project in projects %}
+        <p><a href="{% url 'core.views.project_details' project.id %}">{{ project.title }}</a></p>
+        <p>
+          {{ project.owner_role }} seeking
+          {% for wanted in project.wanted_set.all %}
+            {{ wanted.role }}
+          {% endfor %}
+        </p>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="flex footer"></div>
+
+</body>
+</html>
+
