--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,52 +2,71 @@
 <html>
 <head>
   <title></title>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <style type="text/css">
-    .site {
+    body {
+      background-color: #F6F3F3;
+      font-family: 'PT Sans', sans-serif;
+      color: #24132F;
+    }
+    .flex-column {
       display: flex;
-      min-height: 100vh;
       flex-direction: column;
     }
-    .flex {
+    .flex-row {
       display: flex;
+      flex-direction: row;
     }
-    .content {
-
+    .header {
+      padding-top: 25px;
+      padding-left: 75px;
+      height: 125px;
+      background-color: #FFFFFF;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.50);
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 46px;
     }
-    .nav {
-      flex-direction: column;
+    .main {
+      flex: 4;
+      padding-left: 85px;
+      padding-top: 35px;
     }
-    .list {
-      flex-direction: column;
+    .tagline {
+      font-size: 24px;
+      line-height: 32px;
+    }
+    .post {
+      height: 125px;
+      background-color: #FFFFFF;
+    }
+    .other {
+      flex: 1;
+      margin-right: 60px;
+      margin-left: 35px;
     }
   </style>
 
 </head>
-<body class="site">
-  <div class="flex header">
-
+<body class="flex-column">
+  <div class="flex-row header">
+    <div><img src="/Users/Dave/Downloads/logo.svg">WiscCollab</div>
   </div>
-  <div class="flex content">
-    <div class="flex nav">
+  <div class="flex-row">
+    <div class="flex-column main">
+      <div class="tagline">Merging skills and bringing ideas to life</div>
+      <div class="post yellow">Project A</div>
+      <div class="post peach">Project B</div>
+      <div class="post green">Project C</div>
     </div>
-    <div class="flex list">
-      {% for project in projects %}
-        <p><a href="{% url 'core.views.project_details' project.id %}">{{ project.title }}</a></p>
-        <p>
-          {{ project.owner_role }} seeking
-          {% for wanted in project.wanted_set.all %}
-            {{ wanted.role }}
-          {% endfor %}
-        </p>
-      {% endfor %}
+    <div class="flex-column other">
+      <button>Add a Project</button>
+      <div>Post Project</div>
     </div>
   </div>
-  <div class="flex footer"></div>
-
 </body>
 </html>
 
