--- a/core/templates/project_details.html
+++ b/core/templates/project_details.html
@@ -1,2 +1,89 @@
-<h1>{{ project.title }}</h1>
-{{ project.description }}
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <style type="text/css">
+    body {
+      background-color: #F6F3F3;
+      font-family: 'PT Sans', sans-serif;
+      color: #24132F;
+    }
+    .flex-column {
+      display: flex;
+      flex-direction: column;
+    }
+    .flex-row {
+      display: flex;
+      flex-direction: row;
+    }
+    .header {
+      padding-top: 25px;
+      padding-left: 75px;
+      height: 125px;
+      background-color: #FFFFFF;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.50);
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 46px;
+    }
+    .main {
+      flex: 4;
+      padding: 35px 85px;
+    }
+    .tagline {
+      font-size: 24px;
+      line-height: 32px;
+    }
+    .brand, .brand:hover {
+      color: #24132F;
+      text-decoration: none;
+    }
+    .card {
+      background-color: white;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.20);
+      padding: 28px 20px;
+      margin: 18px 0;
+    }
+    textarea {
+      margin-bottom: 12px;
+    }
+  </style>
+
+</head>
+<body class="flex-column">
+  <div class="flex-row header">
+    <a href="/" class="brand">
+      <div><img src="/static/Logo.svg">WiscCollab</div>
+    </a>
+  </div>
+  <div class="flex-row">
+    <div class="flex-column main">
+      <h1>{{ project.title }}</h1>
+      <div class="card">
+        {{ project.description }}
+      </div>
+
+      <div class="card">
+        <div class="form-group">
+          <h2>Leave a comment...</h2>
+          <textarea class="form-control" rows="4"></textarea>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </div>
+
+      {% for comment in project.comment_set.all %}
+      <div class="card">
+        <h4>{{ comment.user }}</h4>
+        {{ comment.text }}
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+
+</body>
+</html>
