--- a/core/templates/project_details.html
+++ b/core/templates/project_details.html
@@ -49,6 +49,9 @@
       padding: 28px 20px;
       margin: 18px 0;
     }
+    .card-title {
+      margin-top: 0;
+    }
     textarea {
       margin-bottom: 12px;
     }
@@ -68,20 +71,21 @@
         {{ project.description }}
       </div>
 
-      <div class="card">
-        <div class="form-group">
-          <h2>Leave a comment...</h2>
-          <textarea class="form-control" rows="4"></textarea>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-      </div>
-
       {% for comment in project.comment_set.all %}
       <div class="card">
         <h4>{{ comment.user }}</h4>
         {{ comment.text }}
       </div>
       {% endfor %}
+
+      <div class="card">
+        <div class="form-group">
+          <h3 class="card-title">Leave a comment...</h3>
+          <textarea class="form-control" rows="2"></textarea>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </div>
+
     </div>
   </div>
 
